<resources>
    <string name="app_name">OtseaClient</string>
    <string name="soft_name">Otsea</string>
    <string name="login_login">登录</string>
    <string name="login_account">账号:</string>
    <string name="login_account_hint">请输入您的账号</string>
    <string name="login_password_hint">请输入您的密码</string>
    <string name="login_button_forgot">忘记密码</string>
    <string name="login_button_register">注册</string>
    <string name="login_show_remember">记住密码</string>
    <string name="login_show_auto">自动登录</string>
    <string name="register_show_sex">性别:</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="register_show_mail">邮箱:</string>
    <string name="register_hint_mail">请输入邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="show_password">密码:</string>
    <string name="headHeight">50dp</string>
    <string name="textview">TextView</string>
</resources>